--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://welts95.github.io/React_TODOS-REST/",
+  "homepage": "https://agarces50.github.io/Todo-Rest-React/",
   "name": "exercici-rest",
   "version": "0.1.0",
   "private": true,
